Set Fax option installed default to No
Needed to make sure that Fax option was set to know that way the user doesnt have to cycle to no and then yes again to trigger the toggle fax function

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <label>Fax Option Installed:</label>
     <select id="faxInstalled" onchange="toggleFaxSettings()">
       <option>Yes</option>
-      <option>No</option>
+      <option selected>No</option>
     </select>
 
     <div id="faxSettings">
